Fixed z-index issue

--- a/src/components/BackgroundPattern.module.css
+++ b/src/components/BackgroundPattern.module.css
@@ -8,7 +8,7 @@
   width: 100vw;
   height: 100%;
   background-size: cover;
-  z-index: -2;
+  z-index: -4;
   fill: #ffffff;
   opacity: 0.56;
   mix-blend-mode: soft-light;
