--- a/src/components/FollowCursorGlow.module.css
+++ b/src/components/FollowCursorGlow.module.css
@@ -1,9 +1,10 @@
 .glow {
+  z-index: -2;
   position: absolute;
   /*width: 80px;*/
   /*height: 80px;*/
   left: -100;
   top: -100;
   transform: translate(-55%, -65%);
-  transition: 0ms ease all;
+  transition: 0ms ease-in-out all;
 }
